@@ -1,4 +1,7 @@
-                CHANGES IN TraMineRextras VERSION 0.5.3 [2018-02-02] (Development version)
+                CHANGES IN TraMineRextras VERSION 0.5.3 [2018-02-25] (Development version)
+
+Changes in existing functions
+    o   seqrep.grp() an error is raised when one of the groups has less than two cases.
 
 Misc
     o   Function seqeordplot() suppressed. It is superseded by the
